description and mockup now works.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,12 +13,13 @@
         </button>
         <a class="navbar-brand" href="#"><img src="assets/img/logo_tututrain_vsml.png"></a>
     </div>
+
     <div class="collapse navbar-collapse" id="navbar-collapse-main">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="#" class="active">Opis</a></li>
-        <li><a href="#" class="active">Makieta</a></li>
-        <li><a href="#" class="active">Wyliczenie</a></li>
+        <li><a href="#" class="active" routerLink="/">Home</a></li>
+        <li><a href="#" class="active" routerLink="/description">Opis</a></li>
+        <li><a href="#" class="active" routerLink="/mockup">Makieta</a></li>
+        <li><a href="#" class="active" routerLink="/calculations">Wyliczenie</a></li>
 
       </ul>
     </div>
