--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,6 +2,6 @@
 
   <div class="landing-text">
     <h3>Makieta systemu torów H0 a-gleiss</h3>
-    <a href="" class="btn btn-default btn-lg">Get started</a>
+    <a  routerLink="/mockup" class="btn btn-default btn-lg btn-primary">Buduj makietę</a>
   </div>
 </div>
