--- a/src/app/description/description.component.html
+++ b/src/app/description/description.component.html
@@ -1,3 +1,10 @@
-<p>
-  description works!
-</p>
+<div class="container">
+<div class="row">
+  <div class="col-xs-12">
+        <app-single-desc
+          *ngFor="let trackSingle of tracks"
+           [track]="trackSingle"></app-single-desc>
+
+  </div>
+</div>
+</div>
