--- a/src/app/calculations/calculations.component.html
+++ b/src/app/calculations/calculations.component.html
@@ -2,7 +2,30 @@
   <div class="row">
     <div class="col-xs-10 col-xs-offset-1">
       Wyliczona cena torów użytych w makiecie:
-      Do zrobienia
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">tor</th>
+            <th scope="col">cena</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let priceTrack of priceOfTrack; let i = index;">
+            <th scope="row">{{ i }}</th>
+            <td>{{ tracks[priceTrack.id].trackType }}
+              {{ tracks[priceTrack.id].name }}
+              ({{ tracks[priceTrack.id].pikoNumber }})</td>
+            <td>{{ priceTrack.price }}</td>
+          </tr>
+          <tr>
+            <th scope="row">razem:</th>
+            <td></td>
+            <td>{{ sumOfTracks }}</td>
+          </tr>
+        </tbody>
+      </table>
+
     </div>
   </div>
 </div>
