--- a/src/app/mockup/canvas/canvas.component.html
+++ b/src/app/mockup/canvas/canvas.component.html
@@ -3,6 +3,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">Canvas placeholder:</div>
       <div class="panel-body">
+        <canvas id="tutu-tracks"  width = "800" height = "400"></canvas>
         <ul class="list-group">
           <a
             class="list-group-item"
